fix : icon menu on mobile safari

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -62,6 +62,12 @@
           cursor: pointer;
           &:hover{
           @include zoom-effect;
+          &-icon{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-content: center;
+          }
         }
         }
         &-content{
